--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      <h1>Wellcome</h1>
     </div>
       <h2>Git and Github</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime pariatur nulla qui dolorum quasi voluptatem eos! Fugit ut commodi saepe illum illo tenetur, harum quae alias tempora, nemo inventore vitae doloremque, nisi reprehenderit distinctio quisquam voluptatum hic laboriosam consequatur veritatis perferendis maiores. Temporibus voluptatibus ratione aspernatur quas culpa! Pariatur, optio!</p>
     
 </body>
 </html>
